@@ -5,6 +5,7 @@ import id.ac.ui.cs.advprog.hiringgo.authentication.model.User;
 import id.ac.ui.cs.advprog.hiringgo.authentication.repository.UserRepository;
 import id.ac.ui.cs.advprog.hiringgo.dashboard.dto.DashboardResponse;
 import id.ac.ui.cs.advprog.hiringgo.dashboard.dto.MahasiswaDashboardResponse;
+import id.ac.ui.cs.advprog.hiringgo.log.model.Log;
 import id.ac.ui.cs.advprog.hiringgo.log.service.LogService;
 import id.ac.ui.cs.advprog.hiringgo.manajemenlowongan.dto.LowonganDTO;
 import id.ac.ui.cs.advprog.hiringgo.manajemenlowongan.enums.StatusLowongan;
@@ -21,7 +22,9 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.lang.reflect.Method;
 import java.math.BigDecimal;
+import java.time.LocalTime;
 import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -40,9 +43,11 @@ class MahasiswaDashboardServiceImplTest {
     @Mock
     private PendaftaranRepository pendaftaranRepository;
 
-    @Mock private LowonganMapper lowonganMapper;
+    @Mock
+    private LowonganMapper lowonganMapper;
 
-    @Mock private LogService logService;
+    @Mock
+    private LogService logService;
 
     @InjectMocks
     private MahasiswaDashboardServiceImpl service;
@@ -60,7 +65,6 @@ class MahasiswaDashboardServiceImplTest {
         Mahasiswa mahasiswa = mock(Mahasiswa.class);
         when(mahasiswa.getUsername()).thenReturn("mahasiswaUser");
         when(mahasiswa.getFullName()).thenReturn("Mahasiswa FullName");
-        // No need to stub getId() - causes UnnecessaryStubbingException
 
         // User validation
         when(userRepository.existsById(userId)).thenReturn(true);
@@ -138,12 +142,12 @@ class MahasiswaDashboardServiceImplTest {
         assertEquals(1, resp.getPendingApplicationsCount());
         assertEquals(1, resp.getAcceptedApplicationsCount());
         assertEquals(1, resp.getRejectedApplicationsCount());
-        assertEquals(0, resp.getTotalLoggedHours());
-        assertEquals(BigDecimal.ZERO, resp.getTotalIncentive());
+        assertEquals(BigDecimal.ZERO.setScale(2), resp.getTotalLoggedHours());
+        assertEquals(0, resp.getTotalLoggedHours().compareTo(BigDecimal.ZERO));
 
         // Check lists of LowonganDTO
         assertEquals(1, resp.getAcceptedLowongan().size());
-        assertEquals(3, resp.getRecentLowongan().size());
+        // Removed reference to recentLowongan which doesn't exist
     }
 
     @Test
@@ -243,12 +247,27 @@ class MahasiswaDashboardServiceImplTest {
         assertEquals(0, resp.getTotalLowonganCount());
         assertEquals(0, resp.getTotalApplicationsCount());
         assertEquals(0, resp.getAcceptedLowongan().size());
-        assertEquals(0, resp.getRecentLowongan().size());
+        // Removed reference to recentLowongan which doesn't exist
     }
 
     @Test
-    void convertToLowonganDTO_shouldCreateCorrectDTO() {
-        // Setup with necessary fields
+    void convertToLowonganDTO_shouldDelegateToMapper() throws Exception {
+        // Use reflection to test private method
+        Lowongan testLowongan = new Lowongan();
+        LowonganDTO expectedDTO = mock(LowonganDTO.class);
+        when(lowonganMapper.toDto(testLowongan)).thenReturn(expectedDTO);
+
+        Method method = MahasiswaDashboardServiceImpl.class.getDeclaredMethod("convertToLowonganDTO", Lowongan.class);
+        method.setAccessible(true);
+        LowonganDTO result = (LowonganDTO) method.invoke(service, testLowongan);
+
+        assertSame(expectedDTO, result);
+        verify(lowonganMapper).toDto(testLowongan);
+    }
+
+    @Test
+    void getDashboardData_withLogs_shouldCalculateLoggedHoursAndIncentive() {
+        // Setup mahasiswa mock
         Mahasiswa mahasiswa = mock(Mahasiswa.class);
         when(mahasiswa.getUsername()).thenReturn("mahasiswaUser");
         when(mahasiswa.getFullName()).thenReturn("Mahasiswa FullName");
@@ -256,37 +275,89 @@ class MahasiswaDashboardServiceImplTest {
         when(userRepository.existsById(userId)).thenReturn(true);
         when(userRepository.findById(userId)).thenReturn(Optional.of(mahasiswa));
 
-        // Create a properly initialized lowongan
-        UUID lowonganId = UUID.randomUUID();
-        Lowongan testLowongan = new Lowongan();
-        testLowongan.setLowonganId(lowonganId);
-        testLowongan.setJumlahAsdosDibutuhkan(5);
-        testLowongan.setJumlahAsdosDiterima(0);
-        testLowongan.setJumlahAsdosPendaftar(0);
-        // Add a MataKuliah to avoid NullPointerException
-        MataKuliah mk = new MataKuliah("K1", "TestCourse", "Description");
-        testLowongan.setMataKuliah(mk);
-        // Set other required fields to avoid NPEs
-        testLowongan.setTahunAjaran("2023/2024");
-        testLowongan.setSemester("GANJIL");
-        testLowongan.setStatusLowongan("DIBUKA");
+        // Setup lowongan and pendaftaran as in happy path
+        MataKuliah m1 = new MataKuliah("K1", "Name1", "Desc1");
+        Lowongan low1 = new Lowongan();
+        low1.setLowonganId(UUID.randomUUID());
+        low1.setMataKuliah(m1);
+        low1.setJumlahAsdosDibutuhkan(3);
+        low1.setJumlahAsdosDiterima(1);
+        low1.setJumlahAsdosPendaftar(2);
 
-        when(lowonganRepository.findByStatusLowongan(any())).thenReturn(List.of(testLowongan));
-        when(lowonganRepository.findAll()).thenReturn(List.of(testLowongan));
-        when(pendaftaranRepository.findByKandidatId(userId)).thenReturn(Collections.emptyList());
+        List<Lowongan> openLowonganList = List.of(low1);
+        when(lowonganRepository.findByStatusLowongan(StatusLowongan.DIBUKA)).thenReturn(openLowonganList);
+        when(lowonganRepository.findAll()).thenReturn(openLowonganList);
 
-        LowonganDTO mockDto = mock(LowonganDTO.class);
-        when(mockDto.getLowonganId()).thenReturn(lowonganId);
-        when(lowonganMapper.toDto(testLowongan))
-                .thenReturn(mockDto);
+        Pendaftaran app = mock(Pendaftaran.class);
+        when(app.getStatus()).thenReturn(StatusPendaftaran.DITERIMA);
+        when(app.getLowongan()).thenReturn(low1);
+        List<Pendaftaran> pendaftaranList = List.of(app);
+        when(pendaftaranRepository.findByKandidatId(userId)).thenReturn(pendaftaranList);
 
-        // execute
+        // Setup logs: 2 logs, each 90 minutes (1.5 hours)
+        Log log1 = mock(Log.class);
+        Log log2 = mock(Log.class);
+        when(log1.getWaktuMulai()).thenReturn(LocalTime.of(8, 0));
+        when(log1.getWaktuSelesai()).thenReturn(LocalTime.of(9, 30));
+        when(log2.getWaktuMulai()).thenReturn(LocalTime.of(10, 0));
+        when(log2.getWaktuSelesai()).thenReturn(LocalTime.of(11, 30));
+        when(logService.getLogsByUser(userId)).thenReturn(List.of(log1, log2));
+
+        // Execute
         DashboardResponse base = service.getDashboardData(userId);
         MahasiswaDashboardResponse resp = (MahasiswaDashboardResponse) base;
 
-        // now this won't NPE:
-        assertEquals(1, resp.getRecentLowongan().size());
-        assertEquals(lowonganId,
-                resp.getRecentLowongan().get(0).getLowonganId());
+        // Each log is 1.5 hours, total 3.0 hours
+        assertEquals(new BigDecimal("3.00"), resp.getTotalLoggedHours());
+        // Incentive: 3.00 * 27500 = 82500.00
+        assertEquals(new BigDecimal("82500.00"), resp.getTotalIncentive());
+    }
+    @Test
+    void validateUser_userDoesNotExist_shouldThrow() {
+        // Setup the userRepository to return false for existsById
+        when(userRepository.existsById(userId)).thenReturn(false);
+
+        // Create a test subclass to expose protected method
+        class TestableService extends MahasiswaDashboardServiceImpl {
+            public TestableService() {
+                super(userRepository, lowonganRepository, pendaftaranRepository, lowonganMapper, logService);
+            }
+
+            @Override
+            public void validateUser(UUID userId) {
+                super.validateUser(userId);
+            }
+        }
+
+        TestableService testableService = new TestableService();
+
+        // Test that the correct exception is thrown
+        NoSuchElementException ex = assertThrows(
+                NoSuchElementException.class,
+                () -> testableService.validateUser(userId)
+        );
+
+        assertEquals("User tidak ditemukan dengan ID: " + userId, ex.getMessage());
+        verify(userRepository).existsById(userId);
+        // Verify that findById is never called when existsById returns false
+        verify(userRepository, never()).findById(any());
+    }
+
+    @Test
+    void countApplicationsByStatus_withNullApplications() throws Exception {
+        // Use reflection to test private method directly
+        Method method = MahasiswaDashboardServiceImpl.class.getDeclaredMethod(
+                "countApplicationsByStatus",
+                List.class,
+                StatusPendaftaran.class);
+        method.setAccessible(true);
+
+        // Test null applications case
+        int result = (int) method.invoke(
+                service,
+                null,
+                StatusPendaftaran.DITERIMA);
+
+        assertEquals(0, result);
     }
 }
